--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ charset-normalizer==3.3.2
 click==8.1.7
 colorama==0.4.6
 cookiecutter==2.6.0
+coverage==7.4.4
 fastapi==0.110.0
 flake8==7.0.0
 flet==0.21.2
@@ -18,6 +19,7 @@ httpcore==1.0.5
 httptools==0.6.1
 httpx==0.27.0
 idna==3.6
+iniconfig==2.0.0
 Jinja2==3.1.3
 markdown-it-py==3.0.0
 MarkupSafe==2.1.5
@@ -26,12 +28,14 @@ mdurl==0.1.2
 oauthlib==3.2.2
 packaging==23.2
 pep8==1.7.1
+pluggy==1.4.0
 pycodestyle==2.11.1
 pydantic==2.6.4
 pydantic_core==2.16.3
 pyflakes==3.2.0
 Pygments==2.17.2
 pypng==0.20220715.0
+pytest==8.1.1
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 python-slugify==8.0.4
