--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -1,13 +1,13 @@
 # This workflow will install Python dependencies, run tests and lint with a single version of Python
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-python
 
-name: build
+name: Build and test
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "developer" ]
   pull_request:
-    branches: [ "main" ]
+    branches: [ "main", "homolog" ]
 
 permissions:
   contents: read
@@ -36,4 +36,4 @@ jobs:
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     - name: Test with coverage
       run: |
-        coverage run -m pytest
+        coverage run -m pytest;
