--- a/.github/workflows/auto_pr_for_homolog.yml
+++ b/.github/workflows/auto_pr_for_homolog.yml
@@ -16,14 +16,18 @@ jobs:
         uses: peter-evans/create-pull-request@v6
         with:
           token: ${{ secrets.PERSONAL_GITHUB_TOKEN }}
-          title: This feature passed testing
+          title: "Feature: Window for Software"
           body: | # Write Pull Request feature specifications here
             Auto PR for Homolog.
-            ... 
+            Layout for window of software created.
+            Added four text boxes for writeteding users and added buttons. 
           branch: ${{ github.ref }} #The branch where you commit.
           base: homolog
           assignees: ${{ github.actor }}
-          labels: New feature # Write the labels referring to the Pull Request
+          # Write the labels referring to the Pull Request
+          labels: |
+           New feature
+           Layout Window
 
       - name: Check output
         run: |
