--- a/.github/workflows/auto_pr_for_main.yml
+++ b/.github/workflows/auto_pr_for_main.yml
@@ -16,19 +16,18 @@ jobs:
         uses: peter-evans/create-pull-request@v6
         with:
           token: ${{ secrets.PERSONAL_GITHUB_TOKEN }}
-          title: Aded values for textbox determined and passed for tests in homolog
+          title: Feature of Calcular values is OK
           body: | # Write Pull Request feature specifications here
            Auto PR for Homolog.
-           Now the user can add value in the selected text box by clicking on the buttons.
-           User can also alter of text box.
+           Now the user can calcular values in real time or click button of equals for in GUI.
+           Button of equals is on.
           branch: ${{ github.ref }} #The branch where you commit.
           base: main
           assignees: ${{ github.actor }}
           # Write the labels referring to the Pull Request
           labels: |
            New feature
-           Add value
-           Alter text box
+           Calcular values
            Passed for tests
 
       - name: Check output
