--- a/.github/workflows/auto_pr_for_main.yml
+++ b/.github/workflows/auto_pr_for_main.yml
@@ -16,17 +16,18 @@ jobs:
         uses: peter-evans/create-pull-request@v6
         with:
           token: ${{ secrets.PERSONAL_GITHUB_TOKEN }}
-          title: Feature of activate buttons delete and clear all is OK
+          title: Feature of new binary caculator is OK
           body: | # Write Pull Request feature specifications here
            Auto PR for Homolog.
-           The user can now delete the last digit entered or clear all text boxes.
+           Create a manual binary calculator variable, which has the functions of calculating values ​​created in a hard code way and took advantage of and corrected some errors in the automated version.
           branch: ${{ github.ref }} #The branch where you commit.
           base: main
           assignees: ${{ github.actor }}
           # Write the labels referring to the Pull Request
           labels: |
            New feature
-           Buttons is on
+           New calc
+           Is OK!
            
       - name: Check output
         run: |
