--- a/.github/workflows/auto_pr_for_main.yml
+++ b/.github/workflows/auto_pr_for_main.yml
@@ -16,19 +16,18 @@ jobs:
         uses: peter-evans/create-pull-request@v6
         with:
           token: ${{ secrets.PERSONAL_GITHUB_TOKEN }}
-          title: Feature of new binary caculator is OK
+          title: Feature of Fix olds errors is OK!
           body: | # Write Pull Request feature specifications here
            Auto PR for Homolog.
-           Create a manual binary calculator variable, which has the functions of calculating values ​​created in a hard code way and took advantage of and corrected some errors in the automated version.
+           Fix bug in manual calculator where the button delete is not it worked correct in textbox hexadecimal.
+           I passed the corrections from the manual calculator to the automatic calculator.          
           branch: ${{ github.ref }} #The branch where you commit.
           base: main
           assignees: ${{ github.actor }}
           # Write the labels referring to the Pull Request
           labels: |
-           New feature
-           New calc
-           Is OK!
-           
+            Bug fixes
+
       - name: Check output
         run: |
           echo "Pull Request Number: ${{ steps.cpr.outputs.pull-request-number }}"
